--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "toster-stickers",
   "version": "1.0.0",
   "private": true,
+  "repository": {
+    "url": "https://github.com/d0kur0/toster-stickers"
+  },
   "scripts": {
-    "build-stickers": "tsc stickerPacks/buildPacks.ts && node stickerPacks/buildPacks.js && del stickerPacks/buildPacks.js",
+    "build-stickers": "tsc buildPacks.ts --outDir .tmp && node .tmp/buildPacks.js && del .tmp",
     "build": "npm run build-stickers && rollup -c",
     "dev": "npm run build-stickers && rollup -c -w",
     "start": "sirv public",
@@ -25,9 +28,12 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
+    "del-cli": "^3.0.1",
     "postcss": "^7.0.32",
     "postcss-import": "^12.0.1",
     "postcss-load-config": "^2.1.0",
+    "sharp": "^0.25.4",
     "sirv-cli": "^1.0.0",
     "svelte-icons": "^2.1.0"
   }
