--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "^7.0.32",
     "postcss-import": "^12.0.1",
     "postcss-load-config": "^2.1.0",
+    "prettier-plugin-svelte": "^1.1.0",
     "sharp": "^0.25.4",
     "sirv-cli": "^1.0.0",
     "svelte-icons": "^2.1.0"
